--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -19,8 +19,12 @@ jobs:
         id: split
         with:
           msg: ${{ env.SKIP_LIST }}
+      - run: |
+          arr=()
+          for i in $(seq 0 $((${{ steps.split.length }}-1))); do echo $i; arr[$#arr[@]}]=$i;done
+          echo "skip_list=$arr" >> $GITHUB_OUTPUT
     outputs:
-      skip_list: ${{ steps.id.outputs }}
+      skip_list: ${{ steps.id.outputs.skip_list }}
   one:
     runs-on: ubuntu-latest
     needs: [skip]
@@ -45,6 +49,7 @@ jobs:
 
   four:
     runs-on: ubuntu-latest
+    needs: [skip]
     steps:
       - name: Run
         run: echo ran this one!
