--- a/.github/workflows/create_conda_envs.yml
+++ b/.github/workflows/create_conda_envs.yml
@@ -8,7 +8,7 @@ on:
         required: false
 
 env:
-  METPLUS_ENV_VERSION: v6.0-test
+  METPLUS_ENV_VERSION: v6.0
   DOCKERFILE: Dockerfile
   BASE_ENV: metplus_base
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
