--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -23,7 +23,36 @@ jobs:
         run: |
           skip_str=${{ env.SKIP_LIST }}
           arr=()
-          for i in $(seq 1 30); do val=$(echo $skip_str | awk -F '{print ${!i}'); echo $val; arr[${#arr[@]}]=$val;done
+          val=$(echo $skip_str | awk '{print $1}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $2}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $3}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $4}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $5}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $6}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $7}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $8}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $9}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $10}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $11}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $12}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $13}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $14}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $15}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $16}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $17}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $18}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $19}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $20}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $21}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $22}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $23}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $24}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $25}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $26}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $27}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $28}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $29}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
+          val=$(echo $skip_str | awk '{print $30}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
           echo "skip_list=$arr" >> $GITHUB_OUTPUT
           echo ${arr[@]}
     outputs:
