--- a/.github/workflows/create_conda_envs.yml
+++ b/.github/workflows/create_conda_envs.yml
@@ -16,7 +16,6 @@ env:
 
 jobs:
   conda:
-    name: "Create conda env"
     runs-on: ubuntu-latest
     env:
       ENV_NAME: conda
@@ -32,12 +31,11 @@ jobs:
           path: METplus
           ref: feature_2338_debian12_conda_envs
       - name: Build
-        run: echo ghatest/.github/jobs/build_conda_image.sh
+        run: ghatest/.github/jobs/build_conda_image.sh
       - name: Push
-        run: echo ghatest/.github/jobs/push_conda_image.sh
+        run: ghatest/.github/jobs/push_conda_image.sh
 
   metplus_base:
-    name: "Create metplus_base env"
     runs-on: ubuntu-latest
     needs: [conda]
     env:
@@ -54,12 +52,11 @@ jobs:
           path: METplus
           ref: feature_2338_debian12_conda_envs
       - name: Build
-        run: echo ghatest/.github/jobs/build_conda_image.sh
+        run: ghatest/.github/jobs/build_conda_image.sh
       - name: Push
-        run: echo ghatest/.github/jobs/push_conda_image.sh
+        run: ghatest/.github/jobs/push_conda_image.sh
 
   py_embed_base:
-    name: "Create py_embed_base env"
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -76,9 +73,9 @@ jobs:
           path: METplus
           ref: feature_2338_debian12_conda_envs
       - name: Build
-        run: echo ghatest/.github/jobs/build_conda_image.sh
+        run: ghatest/.github/jobs/build_conda_image.sh
       - name: Push
-        run: echo ghatest/.github/jobs/push_conda_image.sh
+        run: ghatest/.github/jobs/push_conda_image.sh
 
   h5py:
     runs-on: ubuntu-latest
@@ -97,9 +94,9 @@ jobs:
           path: METplus
           ref: feature_2338_debian12_conda_envs
       - name: Build
-        run: echo ghatest/.github/jobs/build_conda_image.sh
+        run: ghatest/.github/jobs/build_conda_image.sh
       - name: Push
-        run: echo ghatest/.github/jobs/push_conda_image.sh
+        run: ghatest/.github/jobs/push_conda_image.sh
 
   metdataio:
     runs-on: ubuntu-latest
