--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -9,7 +9,7 @@ on:
         required: false
 
 env:
-  SKIP_LIST: 'two   four'
+  SKIP_LIST: 'two_again   four'
 
 jobs:
   skip:
@@ -22,40 +22,13 @@ jobs:
       - id: combine
         run: |
           skip_str="${{ env.SKIP_LIST }}"
-          arr=()
-          echo $skip_str
-          val=$(echo $skip_str | awk '{print $1}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $2}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $3}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $4}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $5}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $6}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $7}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $8}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $9}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $10}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $11}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $12}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $13}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $14}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $15}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $16}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $17}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $18}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $19}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $20}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $21}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $22}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $23}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $24}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $25}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $26}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $27}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $28}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $29}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          val=$(echo $skip_str | awk '{print $30}'); if [ ! -z "$val" ]; then arr[${#arr[@]}]=$val; fi
-          echo "skip_list=$arr" >> $GITHUB_OUTPUT
-          echo ${arr[@]}
+          IFS=', ' read -r -a arr <<< "$skip_str"
+          echo "skip_list2=$arr" >> $GITHUB_OUTPUT
+          JSON="["
+          for item in ${arr[@]}; do; JSON="$JSON\"$item\""; done
+          if [[ $JSON == *, ]]; then; JSON="${JSON%?}"; fi
+          echo "skip_list=$( echo "$JSON" )" >> $GITHUB_OUTPUT
+          echo ${JSON}
     outputs:
       skip_list: ${{ steps.combine.outputs.skip_list }}
   one:
@@ -97,3 +70,11 @@ jobs:
       - name: Run
         run: echo ran this one!
       - run: echo ${{ contains(needs.skip.outputs.skip_list, 'five') }}
+
+  two_again:
+    runs-on: ubuntu-latest
+    needs: [skip,one]
+    steps:
+      - name: Run
+        run: echo ran this one!
+      - run: echo ${{ contains(needs.skip.outputs.skip_list, 'two_again') }}
