--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -23,59 +23,75 @@ jobs:
         run: |
           skip_str="${{ env.SKIP_LIST }}"
           IFS=', ' read -r -a arr <<< "$skip_str"
-          echo "skip_list2=$arr" >> $GITHUB_OUTPUT
+          if [ -z "$arr" ]; then echo "no_skip=true" >> $GITHUB_OUTPUT; exit 0; fi
           JSON="["
           for item in ${arr[@]}; do JSON="$JSON\"$item\","; done
           if [[ $JSON == *, ]]; then JSON="${JSON%?}"; fi
           JSON="$JSON]"
-          echo "skip_list=$( echo "$JSON" )" >> $GITHUB_OUTPUT
+          echo "run_list=$( echo "$JSON" )" >> $GITHUB_OUTPUT
           echo ${JSON}
     outputs:
-      skip_list: ${{ steps.combine.outputs.skip_list }}
+      no_skip: ${{ steps.combine.outputs.no_skip }}
+      run_list: ${{ steps.combine.outputs.run_list }}
   one:
     runs-on: ubuntu-latest
     needs: [skip]
+    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'one') }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.skip_list), 'one') }}
+      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'one') }}
 
   two:
     runs-on: ubuntu-latest
     needs: [skip,one]
+    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'two') }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.skip_list), 'two') }}
+      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'two') }}
 
   three:
     runs-on: ubuntu-latest
     needs: [skip,one]
+    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'three') }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.skip_list), 'three') }}
+      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'three') }}
 
   four:
     runs-on: ubuntu-latest
     needs: [skip]
+    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'four') }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.skip_list), 'four') }}
+      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'four') }}
 
   five:
     runs-on: ubuntu-latest
     needs: [skip,three]
+    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'five') }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.skip_list), 'five') }}
+      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'five') }}
 
   two_again:
     runs-on: ubuntu-latest
     needs: [skip,one]
+    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'two_again') }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.skip_list), 'two_again') }}
+      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'two_again') }}
+
+  six:
+    runs-on: ubuntu-latest
+    needs: [skip,two_again]
+    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'six') }}
+    steps:
+      - name: Run
+        run: echo ran this one!
+      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'six') }}
