--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -36,7 +36,7 @@ jobs:
   one:
     runs-on: ubuntu-latest
     needs: [skip]
-    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'one') }}
+    if: always() && (${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'one') }})
     steps:
       - name: Run
         run: echo ran this one!
