--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -24,6 +24,7 @@ jobs:
           skip_str="${{ env.SKIP_LIST }}"
           IFS=', ' read -r -a arr <<< "$skip_str"
           if [ -z "$arr" ]; then echo "no_skip=true" >> $GITHUB_OUTPUT; exit 0; fi
+          echo "no_skip=false" >> $GITHUB_OUTPUT;
           JSON="["
           for item in ${arr[@]}; do JSON="$JSON\"$item\","; done
           if [[ $JSON == *, ]]; then JSON="${JSON%?}"; fi
@@ -42,6 +43,8 @@ jobs:
         run: echo ran this one!
       - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'one') }}
       - run: echo ${{ needs.skip.outputs.no_skip }}
+      - run: echo ${{ needs.skip.outputs.no_skip == 'true' }}
+      - run: echo ${{ needs.skip.outputs.no_skip == 'false' }}
 
   two:
     runs-on: ubuntu-latest
