--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -49,7 +49,7 @@ jobs:
   two:
     runs-on: ubuntu-latest
     needs: [skip,one]
-    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'two') }}
+    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'two')) }}
     steps:
       - name: Run
         run: echo ran this one!
@@ -58,7 +58,7 @@ jobs:
   three:
     runs-on: ubuntu-latest
     needs: [skip,one]
-    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'three') }}
+    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'three')) }}
     steps:
       - name: Run
         run: echo ran this one!
@@ -67,7 +67,7 @@ jobs:
   four:
     runs-on: ubuntu-latest
     needs: [skip]
-    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'four') }}
+    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'four')) }}
     steps:
       - name: Run
         run: echo ran this one!
@@ -76,7 +76,7 @@ jobs:
   five:
     runs-on: ubuntu-latest
     needs: [skip,three]
-    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'five') }}
+    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'five')) }}
     steps:
       - name: Run
         run: echo ran this one!
@@ -85,7 +85,7 @@ jobs:
   two_again:
     runs-on: ubuntu-latest
     needs: [skip,one]
-    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'two_again') }}
+    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'two_again')) }}
     steps:
       - name: Run
         run: echo ran this one!
@@ -94,7 +94,7 @@ jobs:
   six:
     runs-on: ubuntu-latest
     needs: [skip,two_again]
-    if: always() && ${{ needs.skip.outputs.no_skip == 'true' }} || ${{ contains(fromJSON(needs.skip.outputs.run_list), 'six') }}
+    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'six')) }}
     steps:
       - name: Run
         run: echo ran this one!
