--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -1,30 +1,23 @@
 name: Subset List Test
 
 on:
-  push:
   workflow_dispatch:
     inputs:
       subset:
-        description: 'Comma-separated list of environments to skip. Leave blank to build all.'
-        required: false
-
-env:
-  SKIP_LIST: ''
+        description: 'Space-separated list of environments to build. Use "all" to build all.'
+        required: true
+        default: 'all'
 
 jobs:
-  skip:
+  check:
     runs-on: ubuntu-latest
     steps:
-      - uses: jungwinter/split@v2
-        id: split
-        with:
-          msg: ${{ env.SKIP_LIST }}
-      - id: combine
+      - id: parse_list
         run: |
-          skip_str="${{ env.SKIP_LIST }}"
-          IFS=', ' read -r -a arr <<< "$skip_str"
-          if [ -z "$arr" ]; then echo "no_skip=true" >> $GITHUB_OUTPUT; exit 0; fi
+          run_str=${{ github.event.inputs.subset }}
+          if [ "$run_str" == "all" ]; then echo "no_skip=true" >> $GITHUB_OUTPUT; exit 0; fi
           echo "no_skip=false" >> $GITHUB_OUTPUT;
+          IFS=', ' read -r -a arr <<< "$run_str"
           JSON="["
           for item in ${arr[@]}; do JSON="$JSON\"$item\","; done
           if [[ $JSON == *, ]]; then JSON="${JSON%?}"; fi
@@ -32,70 +25,70 @@ jobs:
           echo "run_list=$( echo "$JSON" )" >> $GITHUB_OUTPUT
           echo ${JSON}
     outputs:
-      no_skip: ${{ steps.combine.outputs.no_skip }}
-      run_list: ${{ steps.combine.outputs.run_list }}
+      no_skip: ${{ steps.parse_list.outputs.no_skip }}
+      run_list: ${{ steps.parse_list.outputs.run_list }}
   one:
     runs-on: ubuntu-latest
-    needs: [skip]
-    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'one')) }}
+    needs: [check]
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'one')) }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'one') }}
-      - run: echo ${{ needs.skip.outputs.no_skip }}
-      - run: echo ${{ needs.skip.outputs.no_skip == 'true' }}
-      - run: echo ${{ needs.skip.outputs.no_skip == 'false' }}
+      - run: echo ${{ contains(fromJSON(needs.check.outputs.run_list), 'one') }}
+      - run: echo ${{ needs.check.outputs.no_skip }}
+      - run: echo ${{ needs.check.outputs.no_skip == 'true' }}
+      - run: echo ${{ needs.check.outputs.no_skip == 'false' }}
 
   two:
     runs-on: ubuntu-latest
-    needs: [skip,one]
-    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'two')) }}
+    needs: [check,one]
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'two')) }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'two') }}
+      - run: echo ${{ contains(fromJSON(needs.check.outputs.run_list), 'two') }}
 
   three:
     runs-on: ubuntu-latest
-    needs: [skip,one]
-    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'three')) }}
+    needs: [check,one]
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'three')) }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'three') }}
+      - run: echo ${{ contains(fromJSON(needs.check.outputs.run_list), 'three') }}
 
   four:
     runs-on: ubuntu-latest
-    needs: [skip]
-    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'four')) }}
+    needs: [check]
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'four')) }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'four') }}
+      - run: echo ${{ contains(fromJSON(needs.check.outputs.run_list), 'four') }}
 
   five:
     runs-on: ubuntu-latest
-    needs: [skip,three]
-    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'five')) }}
+    needs: [check,three]
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'five')) }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'five') }}
+      - run: echo ${{ contains(fromJSON(needs.check.outputs.run_list), 'five') }}
 
   two_again:
     runs-on: ubuntu-latest
-    needs: [skip,one]
-    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'two_again')) }}
+    needs: [check,one]
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'two_again')) }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'two_again') }}
+      - run: echo ${{ contains(fromJSON(needs.check.outputs.run_list), 'two_again') }}
 
   six:
     runs-on: ubuntu-latest
-    needs: [skip,two_again]
-    if: ${{ always() && (needs.skip.outputs.no_skip == 'true' || contains(fromJSON(needs.skip.outputs.run_list), 'six')) }}
+    needs: [check,two_again]
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'six')) }}
     steps:
       - name: Run
         run: echo ran this one!
-      - run: echo ${{ contains(fromJSON(needs.skip.outputs.run_list), 'six') }}
+      - run: echo ${{ contains(fromJSON(needs.check.outputs.run_list), 'six') }}
