--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - id: parse_list
         run: |
-          run_str=${{ github.event.inputs.subset }}
+          run_str="${{ github.event.inputs.subset }}"
           if [ "$run_str" == "all" ]; then echo "no_skip=true" >> $GITHUB_OUTPUT; exit 0; fi
           echo "no_skip=false" >> $GITHUB_OUTPUT;
           IFS=', ' read -r -a arr <<< "$run_str"
