--- a/.github/workflows/create_conda_envs.yml
+++ b/.github/workflows/create_conda_envs.yml
@@ -6,16 +6,38 @@ on:
       subset:
         description: 'Comma-separated list of environments to skip. Leave blank to build all.'
         required: false
+        default: ''
 
 env:
-  METPLUS_ENV_VERSION: v6.0
+  METPLUS_ENV_VERSION: v6.0-test
   DOCKERFILE: Dockerfile
   BASE_ENV: metplus_base
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 jobs:
+  check:
+    name: Check inputs to determine what to run
+    runs-on: ubuntu-latest
+    steps:
+      - id: parse_list
+        run: |
+          run_str="${{ github.event.inputs.subset }}"
+          if [ "$run_str" == "" ]; then echo "no_skip=true" >> $GITHUB_OUTPUT; exit 0; fi
+          IFS=', ' read -r -a arr <<< "$run_str"
+          JSON="["
+          for item in ${arr[@]}; do JSON="$JSON\"$item\","; done
+          if [[ $JSON == *, ]]; then JSON="${JSON%?}"; fi
+          JSON="$JSON]"
+          echo "run_list=$( echo "$JSON" )" >> $GITHUB_OUTPUT
+    outputs:
+      no_skip: ${{ steps.parse_list.outputs.no_skip }}
+      run_list: ${{ steps.parse_list.outputs.run_list }}
+
   conda:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'conda')) }}
     runs-on: ubuntu-latest
     env:
       ENV_NAME: conda
@@ -36,6 +58,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   metplus_base:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'metplus_base')) }}
     runs-on: ubuntu-latest
     needs: [conda]
     env:
@@ -57,6 +82,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   py_embed_base:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'py_embed_base')) }}
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -78,6 +106,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   h5py:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'h5py')) }}
     runs-on: ubuntu-latest
     needs: [py_embed_base]
     env:
@@ -99,6 +130,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   metdataio:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'metdataio')) }}
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -119,6 +153,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   pygrib:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'pygrib')) }}
     runs-on: ubuntu-latest
     needs: [py_embed_base]
     env:
@@ -140,6 +177,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   cfgrib:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'cfgrib')) }}
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -160,6 +200,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   netcdf4:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'netcdf4')) }}
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -180,6 +223,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   xesmf:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'xesmf')) }}
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -200,6 +246,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   spacetime:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'spacetime')) }}
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -220,6 +269,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   metplotpy:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'metplotpy')) }}
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -241,6 +293,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   weatherregime:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'weatherregime')) }}
     runs-on: ubuntu-latest
     needs: [metplotpy]
     env:
@@ -263,6 +318,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   cycloneplotter:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'cycloneplotter')) }}
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -284,6 +342,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   icecover:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'icecover')) }}
     runs-on: ubuntu-latest
     needs: [py_embed_base]
     env:
@@ -305,6 +366,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   gempak:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'gempak')) }}
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -326,6 +390,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   gfdl-tracker:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'gfdl-tracker')) }}
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -347,6 +414,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   geovista:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'geovista')) }}
     runs-on: ubuntu-latest
     needs: [metplus_base]
     env:
@@ -367,6 +437,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   pandac:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'pandac')) }}
     runs-on: ubuntu-latest
     needs: [metplotpy]
     env:
@@ -388,6 +461,9 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   diff:
+    if: |
+      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
+      contains(fromJSON(needs.check.outputs.run_list), 'diff')) }}
     runs-on: ubuntu-latest
     needs: [netcdf4]
     env:
