--- a/.github/workflows/create_conda_envs.yml
+++ b/.github/workflows/create_conda_envs.yml
@@ -39,6 +39,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'conda')) }}
     runs-on: ubuntu-latest
+    needs: [check]
     env:
       ENV_NAME: conda
       DOCKERFILE: Dockerfile.conda
@@ -62,7 +63,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'metplus_base')) }}
     runs-on: ubuntu-latest
-    needs: [conda]
+    needs: [check,conda]
     env:
       ENV_NAME: metplus_base
       DOCKERFILE: Dockerfile.metplus_base
@@ -86,7 +87,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'py_embed_base')) }}
     runs-on: ubuntu-latest
-    needs: [metplus_base]
+    needs: [check,metplus_base]
     env:
       ENV_NAME: py_embed_base
       DOCKERFILE: Dockerfile.py_embed_base
@@ -110,7 +111,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'h5py')) }}
     runs-on: ubuntu-latest
-    needs: [py_embed_base]
+    needs: [check,py_embed_base]
     env:
       ENV_NAME: h5py
       BASE_ENV: py_embed_base
@@ -134,7 +135,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'metdataio')) }}
     runs-on: ubuntu-latest
-    needs: [metplus_base]
+    needs: [check,metplus_base]
     env:
       ENV_NAME: metdataio
     steps:
@@ -157,7 +158,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'pygrib')) }}
     runs-on: ubuntu-latest
-    needs: [py_embed_base]
+    needs: [check,py_embed_base]
     env:
       ENV_NAME: pygrib
       BASE_ENV: py_embed_base
@@ -181,7 +182,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'cfgrib')) }}
     runs-on: ubuntu-latest
-    needs: [metplus_base]
+    needs: [check,metplus_base]
     env:
       ENV_NAME: cfgrib
     steps:
@@ -204,7 +205,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'netcdf4')) }}
     runs-on: ubuntu-latest
-    needs: [metplus_base]
+    needs: [check,metplus_base]
     env:
       ENV_NAME: netcdf4
     steps:
@@ -227,7 +228,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'xesmf')) }}
     runs-on: ubuntu-latest
-    needs: [metplus_base]
+    needs: [check,metplus_base]
     env:
       ENV_NAME: xesmf
     steps:
@@ -250,7 +251,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'spacetime')) }}
     runs-on: ubuntu-latest
-    needs: [metplus_base]
+    needs: [check,metplus_base]
     env:
       ENV_NAME: spacetime
     steps:
@@ -273,7 +274,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'metplotpy')) }}
     runs-on: ubuntu-latest
-    needs: [metplus_base]
+    needs: [check,metplus_base]
     env:
       ENV_NAME: metplotpy
       DOCKERFILE: Dockerfile.cartopy
@@ -297,7 +298,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'weatherregime')) }}
     runs-on: ubuntu-latest
-    needs: [metplotpy]
+    needs: [check,metplotpy]
     env:
       ENV_NAME: weatherregime
       BASE_ENV: metplotpy
@@ -322,7 +323,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'cycloneplotter')) }}
     runs-on: ubuntu-latest
-    needs: [metplus_base]
+    needs: [check,metplus_base]
     env:
       ENV_NAME: cycloneplotter
       DOCKERFILE: Dockerfile.cartopy
@@ -346,7 +347,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'icecover')) }}
     runs-on: ubuntu-latest
-    needs: [py_embed_base]
+    needs: [check,py_embed_base]
     env:
       ENV_NAME: icecover
       BASE_ENV: py_embed_base
@@ -370,7 +371,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'gempak')) }}
     runs-on: ubuntu-latest
-    needs: [metplus_base]
+    needs: [check,metplus_base]
     env:
       ENV_NAME: gempak
       DOCKERFILE: Dockerfile.gempak_env
@@ -394,7 +395,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'gfdl-tracker')) }}
     runs-on: ubuntu-latest
-    needs: [metplus_base]
+    needs: [check,metplus_base]
     env:
       ENV_NAME: gfdl-tracker
       DOCKERFILE: Dockerfile.gfdl-tracker
@@ -418,7 +419,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'geovista')) }}
     runs-on: ubuntu-latest
-    needs: [metplus_base]
+    needs: [check,metplus_base]
     env:
       ENV_NAME: geovista
     steps:
@@ -441,7 +442,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'pandac')) }}
     runs-on: ubuntu-latest
-    needs: [metplotpy]
+    needs: [check,metplotpy]
     env:
       ENV_NAME: pandac
       BASE_ENV: metplotpy
@@ -465,7 +466,7 @@ jobs:
       ${{ always() && (needs.check.outputs.no_skip == 'true' ||
       contains(fromJSON(needs.check.outputs.run_list), 'diff')) }}
     runs-on: ubuntu-latest
-    needs: [netcdf4]
+    needs: [check,netcdf4]
     env:
       ENV_NAME: diff
       BASE_ENV: netcdf4
