--- a/.github/workflows/create_conda_envs.yml
+++ b/.github/workflows/create_conda_envs.yml
@@ -30,6 +30,7 @@ jobs:
           if [[ $JSON == *, ]]; then JSON="${JSON%?}"; fi
           JSON="$JSON]"
           echo "run_list=$( echo "$JSON" )" >> $GITHUB_OUTPUT
+          echo $JSON
     outputs:
       no_skip: ${{ steps.parse_list.outputs.no_skip }}
       run_list: ${{ steps.parse_list.outputs.run_list }}
