--- a/.github/workflows/create_conda_envs.yml
+++ b/.github/workflows/create_conda_envs.yml
@@ -37,9 +37,7 @@ jobs:
       run_list: ${{ steps.parse_list.outputs.run_list }}
 
   conda:
-    if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'conda')) }}
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'conda')) }}
     runs-on: ubuntu-latest
     needs: [check]
     env:
@@ -85,9 +83,7 @@ jobs:
         run: ghatest/.github/jobs/push_conda_image.sh
 
   py_embed_base:
-    if: |
-      ${{ always() && (needs.check.outputs.no_skip == 'true' ||
-      contains(fromJSON(needs.check.outputs.run_list), 'py_embed_base')) }}
+    if: ${{ always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'py_embed_base')) }}
     runs-on: ubuntu-latest
     needs: [check,metplus_base]
     env:
