test setting env var with job id

--- a/.github/workflows/subset_list.yml
+++ b/.github/workflows/subset_list.yml
@@ -58,9 +58,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [check]
     if: always() && (needs.check.outputs.no_skip == 'true' || contains(fromJSON(needs.check.outputs.run_list), 'four'))
+    env:
+      JOB_ID: ${{ github.job }}
     steps:
       - name: Run
         run: echo ran ${{ github.job }}!
+      - run: echo job ID is $JOB_ID
 
   five:
     runs-on: ubuntu-latest
