--- a/.github/workflows/trigger_main.yml
+++ b/.github/workflows/trigger_main.yml
@@ -43,6 +43,8 @@ jobs:
           cmd="$GITHUB_WORKSPACE/METplus/metplus/component_versions.py -i METplotpy -v ${version} -o METplus -f main_v{X}.{Y}"
           echo $cmd
           metplus_branch=$($cmd)
+          echo git -C $GITHUB_WORKSPACE/METplus branch -l ${metplus_branch}
+          git --version
           branch_exists=$(git -C $GITHUB_WORKSPACE/METplus branch -l ${metplus_branch})
           echo branch exists: ${branch_exists}
           if [ -z "${branch_exists}" ]; then
