try to get all branches and switch to develop

--- a/.github/workflows/trigger_main.yml
+++ b/.github/workflows/trigger_main.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: 'dtcenter/METplus'
-          ref: 'develop'
+          #ref: 'develop'
           path: 'METplus'
           fetch-depth: 0
       - id: get_version
@@ -40,11 +40,11 @@ jobs:
           repo=${{ github.repository }}
           repo=${repo#*/}
           version=${{ steps.get_version.outputs.version }}
+          git -C $GITHUB_WORKSPACE/METplus checkout develop
           cmd="$GITHUB_WORKSPACE/METplus/metplus/component_versions.py -i METplotpy -v ${version} -o METplus -f main_v{X}.{Y}"
           echo $cmd
           metplus_branch=$($cmd)
           echo git -C $GITHUB_WORKSPACE/METplus branch -l ${metplus_branch}
-          git --version
           git -C $GITHUB_WORKSPACE/METplus branch -l
           branch_exists=$(git -C $GITHUB_WORKSPACE/METplus branch -l ${metplus_branch})
           echo branch exists: ${branch_exists}
